set not https repo

--- a/docker_build/Dockerfile
+++ b/docker_build/Dockerfile
@@ -2,8 +2,7 @@
 FROM rocker/r-base:latest
 
 ## Install rstan (downloads and builds all dependencies)
-RUN Rscript -e 'install.packages(c("rstan", "devtools", "lubridate"))'
-#, repo = "http://cran.wustl.edu")'
+RUN Rscript -e 'install.packages(c("rstan", "devtools", "lubridate"), repo = "http://cran.wustl.edu")'
 
 ## Make R the default
 CMD ["R"]
